--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/1935103_708278059308976_2852524361912388944_n.jpg?oh=338355408bc40c4b8258ef0e6c1e6667&oe=5ABB9463" alt="" /></span>
+							<span class="avatar"><img src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAd2AAAAJDQ5Mzc1OWQ4LTRmYWQtNDVmMS1hNGIwLTU4NDRkY2Y1NjEzMA.jpg" alt="" /></span>
 							<h1>Moxit Shah</h1>
 							<p>Undergraduate Student</p>
 						</header>
